--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,18 @@
     --gris: #001e5a;
 }
 
+body{
+    font-family: sans-serif;
+    font-size:14px;
+    color: #303030;
+}
+
+p{
+    font-weight: 300;
+    line-height: 2rem;
+    font-size: 1rem;
+}
+
 div.franja-address{
     background-color:#006bb1;
     color:white;
@@ -24,10 +36,56 @@ header .nav-link.active{
     border-radius: 15px;
 }
 
-footer.footer{
+.bg-light{
+    background-color: white !important;
+}
+
+.separador::after{
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100px;
+    margin: 0 auto;
+    background-image: url(../img/separador.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+/** Imagenes de fondo **/
+.imagen-destacada{
+    height: 24rem;
+    background-size: cover;
+}
+
+.nosotros-bg{
+    background-image: url(../img/impr-lona.jpg);
+}
+
+/** Nosotros **/
+.contenido-nosotros{
+    margin-top: -5rem;
+    border: 1px solid #e1e1e1;
+    position: relative;
+    z-index: 100;
+}
+
+.copyright{
+    font-weight: 700;
+}
+
+div.footer{
     background-color: #006bb1
 }
 
-footer.footer .nav-link, p{
+div.footer .nav-link,
+div.footer p{
     color:white;
+}
+
+div.footer .nav-link:hover{
+    color: #1a8ceb;
+}
+
+footer .nav-link.active{
+    border-bottom: 3px solid white;
 }
