--- a/css/style.css
+++ b/css/style.css
@@ -81,15 +81,35 @@ header .nav-link.active{
 
 }
 /** Proyectos Realizados **/
+
+blockquote.subtitulo{
+    font-size: 2rem;
+    color: #213280;
+    font-style: italic;
+    font-weight: 100;
+    border-left: .5rem solid #006bb1;
+}
 /* === COMMENTS === */
+.btn-primary {
+    background-color: #006bb1;
+    border-color: #006bb1;
+
+}
+
+.post a{
+    color:#006bb1;
+}
+
+.post-excerpt a{
+    color: white;
+}
+
 .post-comments-badge {
     height: 70px;
     width: 70px;
     position: absolute;
     right: 20px;
     border: none;
-    -webkit-border-radius: 100%;
-    -moz-border-radius: 100%;
     border-radius: 100%;
     background: #1D71B8;
     text-align: center;
@@ -104,15 +124,52 @@ header .nav-link.active{
    line-height: 20px;
 }
 
-.post-comments-badge i.fa {
+.post-details i.fas{
+    color:#006bb1;
+}
+
+.post-comments-badge i.fas {
    display: block;
    font-size: 15px;
    padding: 0;
    margin-bottom: 4px;
+   color:white;
 }
 
 .post-comments-badge:hover {
    background-color: #213280;
+}
+
+/** Sidebar **/
+aside.bg-primary{
+    background-color: #006bb1!important;
+}
+
+.ultimos-proy li a{
+    color:white;
+}
+
+aside .card{
+    border: none;
+}
+
+aside .card-title{
+    color: black;
+    font-size:1.2rem;
+    font-weight: 700;
+}
+
+aside .card-subtitle{
+    color:#006bb1;
+}
+
+aside .card-footer{
+    background-color: #1a8ceb;
+    color:white !important;
+}
+
+aside .card-footer a{
+    color:white;
 }
 
 
@@ -123,7 +180,7 @@ header .nav-link.active{
 }
 
 div.footer{
-    background-color: #006bb1
+    background-color: #006bb1;
 }
 
 div.footer .nav-link,
