--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,15 @@ aside .card-footer a{
     color:white;
 }
 
+/** Galeria **/
 
+
+/** Contacto **/
+h3.maps{
+    font-size: 1rem;
+    color:#006bb1;
+    text-justify: distribute;
+}
 
 /** Footer **/
 .copyright{
